[gd_scene load_steps=5 format=2]

[ext_resource path="res://Goblins/Goblin Animations.tres" type="SpriteFrames" id=1]
[ext_resource path="res://Goblins/Goblin.gd" type="Script" id=2]
[ext_resource path="res://Goblins/GoblinAttack.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 15.0

[node name="Area2D" type="Area2D" groups=["goblins"]]
script = ExtResource( 2 )
Speed = 250

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
disabled = true

[node name="GoblinSprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 1 )
animation = "Left"
frame = 2
playing = true

[node name="Attack" parent="." instance=ExtResource( 3 )]
Range = 120.0
Attack_Cooldown = 0.5

[connection signal="area_entered" from="." to="." method="_on_Goblin_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Goblin_area_exited"]
[connection signal="hit_reg" from="." to="." method="_on_hit_reg"]
[connection signal="rail_reg" from="." to="." method="_on_rail_reg"]
